마지막교시

--- a/DAY6/layout/005.html
+++ b/DAY6/layout/005.html
@@ -57,6 +57,7 @@
 
         nav {
             padding-left: 25px;
+
         }
 
         aside {
@@ -67,16 +68,20 @@
 
         .right {
             float: right;
+            margin-top: 5px;
         }
 
         .left {
             float: left;
+            margin-top: 5px;
         }
 
         section {
             min-height: 800px;
-            width: 598;
+            width: 598px;
             float: left;
+            margin-top: 5px;
+            background-color: antiquewhite;
         }
 
         footer {
